--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -124,7 +124,7 @@
                         style="object-fit: cover;">
 
                     <!-- View Count Badge -->
-                    <div class="position-absolute top-0 end-0 m-2 p-2 bg-light rounded-circle shadow-sm d-flex align-items-center justify-content-center">
+                    <div class="position-absolute end-0 m-2 p-1 bg-light rounded shadow-sm d-flex align-items-center justify-content-center">
                       <i class="icofont-read-book"></i>
                       <span class="ms-1">{{ post.view_count }}</span>
                     </div>
