--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -126,7 +126,7 @@
                     <!-- View Count Badge -->
                     <div class="position-absolute end-0 m-2 p-1 bg-light rounded shadow-sm d-flex align-items-center justify-content-center">
                       <i class="icofont-read-book"></i>
-                      <span class="ms-1">{{ post.view_count }}</span>
+                      <span class="ms-1 small">{{ post.view_count }}</span>
                     </div>
                   </div>
                 {% endif %}
