--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -198,7 +198,7 @@
                   <div class="swiper-wrapper">
                     {% for course in courses %}
                       <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 grid-item column__custom__class swiper-slide">
-                          <div class="gridarea__wraper gridarea__wraper__2">
+                          <div class="gridarea__wraper gridarea__wraper__2 d-flex flex-column w-100">
                               <div class="gridarea__img">
                                   <a href="{% url 'course_detail' course.slug %}">
                                     {% if course.thumbnail %}
