--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -196,7 +196,7 @@
               <div class="swiper featured__course">
                 <div class="swiper-wrapper">
                   {% for course in courses %}
-                  <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 d-flex">   <!-- ⬅ makes column flex -->
+                  <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 d-flex g-2">   <!-- ⬅ makes column flex -->
                     <div class="gridarea__wraper gridarea__wraper__2 d-flex flex-column w-100">  <!-- ⬅ full height -->
                         <div class="gridarea__img">
                             <a href="{% url 'course_detail' course.slug %}">
