--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -194,9 +194,9 @@
 
             <div class="row row__custom__class">
               <div class="swiper featured__course">
-                <div class="swiper-wrapper">
+                <div class="swiper-wrapper g-2">
                   {% for course in courses %}
-                  <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 d-flex g-2">   <!-- ⬅ makes column flex -->
+                  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 d-flex">   <!-- ⬅ makes column flex -->
                     <div class="gridarea__wraper gridarea__wraper__2 d-flex flex-column w-100">  <!-- ⬅ full height -->
                         <div class="gridarea__img">
                             <a href="{% url 'course_detail' course.slug %}">
