--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -185,8 +185,8 @@
                     </div>
 
                     <div class="slider__controls__wrap slider__controls__arrows">
-                        <div class="swiper-button-next arrow-btn"></div>
-                        <div class="swiper-button-prev arrow-btn"></div>
+                      <div class="swiper-button-next arrow-btn"></div>
+                      <div class="swiper-button-prev arrow-btn"></div>
                     </div>
                 </div>
             </div>
@@ -198,55 +198,59 @@
                   {% for course in courses %}
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 d-flex m-2">   <!-- ⬅ makes column flex -->
                     <div class="gridarea__wraper gridarea__wraper__2 d-flex flex-column w-100">  <!-- ⬅ full height -->
-                        <div class="gridarea__img">
-                            <a href="{% url 'course_detail' course.slug %}">
-                              {% if course.thumbnail %}
-                                <img loading="lazy" src="{{ course.thumbnail.url }}" alt="{{ course.title }}">
+                      <div class="gridarea__img">
+                          <a href="{% url 'course_detail' course.slug %}">
+                            {% if course.thumbnail %}
+                              <img loading="lazy" src="{{ course.thumbnail.url }}" alt="{{ course.title }}">
+                            {% endif %}
+                          </a>
+                          <div class="gridarea__small__button">
+                              <div class="grid__badge">{{ course.category.name }}</div>
+                          </div>
+                      </div>
+                      <div class="gridarea__content flex-grow-1 d-flex flex-column"> <!-- ⬅ stretches -->
+                          <div class="gridarea__list">
+                              <ul>
+                                  <li><i class="icofont-book-alt"></i> {{ course.total_videos }} Lectures</li>
+                                  <li><i class="icofont-clock-time"></i> {{ course.total_duration }} min</li>
+                              </ul>
+                          </div>
+
+                          <div class="gridarea__heading">
+                              <h3><a href="{% url 'course_detail' course.slug %}">{{ course.title }}</a></h3>
+                          </div>
+
+                          <div class="gridarea__price mt-auto"> <!-- ⬅ pushes bottom down -->
+                              ৳{{ course.price }} {% if course.original_price %}<del>/ ৳{{ course.original_price }}</del>{% endif %}
+                              {% if course.price > 0 %}
+                                  <span class="text-danger small"></span>
+                              {% else %}
+                                  <span class="text-success small">Free</span>
                               {% endif %}
-                            </a>
-                            <div class="gridarea__small__button">
-                                <div class="grid__badge">{{ course.category.name }}</div>
-                            </div>
-                        </div>
-                        <div class="gridarea__content flex-grow-1 d-flex flex-column"> <!-- ⬅ stretches -->
-                            <div class="gridarea__list">
-                                <ul>
-                                    <li><i class="icofont-book-alt"></i> {{ course.total_videos }} Lectures</li>
-                                    <li><i class="icofont-clock-time"></i> {{ course.total_duration }} min</li>
-                                </ul>
-                            </div>
+                          </div>
 
-                            <div class="gridarea__heading">
-                                <h3><a href="{% url 'course_detail' course.slug %}">{{ course.title }}</a></h3>
-                            </div>
-
-                            <div class="gridarea__price mt-auto"> <!-- ⬅ pushes bottom down -->
-                                ৳{{ course.price }} {% if course.original_price %}<del>/ ৳{{ course.original_price }}</del>{% endif %}
-                                {% if course.price > 0 %}
-                                    <span class="text-danger small"></span>
-                                {% else %}
-                                    <span class="text-success small">Free</span>
-                                {% endif %}
-                            </div>
-
-                            <div class="gridarea__bottom pt-2 mt-auto">  <!-- ⬅ stays in bottom always -->
-                                <a href="#">
-                                    <div class="gridarea__small__img">
-                                        {% if course.instructor.profile_picture %}
-                                            <img loading="lazy" src="{{ course.instructor.profile_picture.url }}" alt="instructor">
-                                        {% else %}
-                                            <img loading="lazy" src="{% static 'img/profile.png' %}" alt="instructor">
-                                        {% endif %}
-                                        <div class="gridarea__small__content">
-                                            <h6>{{ course.instructor }}</h6>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+                          <div class="gridarea__bottom pt-2 mt-auto">  <!-- ⬅ stays in bottom always -->
+                              <a href="#">
+                                  <div class="gridarea__small__img">
+                                      {% if course.instructor.profile_picture %}
+                                          <img loading="lazy" src="{{ course.instructor.profile_picture.url }}" alt="instructor">
+                                      {% else %}
+                                          <img loading="lazy" src="{% static 'img/profile.png' %}" alt="instructor">
+                                      {% endif %}
+                                      <div class="gridarea__small__content">
+                                          <h6>{{ course.instructor }}</h6>
+                                      </div>
+                                  </div>
+                              </a>
+                          </div>
+                      </div>
                     </div>
                   </div>
                   {% endfor %}
+                </div>
+                <div class="slider__controls__wrap slider__controls__arrows">
+                  <div class="swiper-button-next arrow-btn"></div>
+                  <div class="swiper-button-prev arrow-btn"></div>
                 </div>
               </div>
             </div>
