--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -196,7 +196,7 @@
               <div class="swiper featured__course">
                 <div class="swiper-wrapper">
                   {% for course in courses %}
-                  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 d-flex m-2">   <!-- ⬅ makes column flex -->
+                  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 d-flex m-2 grid-item column__custom__class swiper-slide">   <!-- ⬅ makes column flex -->
                     <div class="gridarea__wraper gridarea__wraper__2 d-flex flex-column w-100">  <!-- ⬅ full height -->
                       <div class="gridarea__img">
                           <a href="{% url 'course_detail' course.slug %}">
