--- a/intern/templates/intern/intern_detail.html
+++ b/intern/templates/intern/intern_detail.html
@@ -263,6 +263,7 @@
               <!-- Sidebar Details (customize if needed) -->
               <div class="course__summery__lists">
                 <ul>
+                  <li><div class="course__summery__item"><span class="sb_label">Price</span><span class="sb_content text-bg-warning">৳{{ intern.current_price|default:"0" }}</span></div></li>
                   <li><div class="course__summery__item"><span class="sb_label">Duration</span><span class="sb_content">{{ intern.duration|default:"N/A" }}</span></div></li>
                   <li><div class="course__summery__item"><span class="sb_label">Mode</span><span class="sb_content">{{ intern.mode|default:"Online / Offline" }}</span></div></li>
                   <li><div class="course__summery__item"><span class="sb_label">Certificate</span><span class="sb_content">{{ intern.certificate|default:"Yes" }}</span></div></li>
